--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
   <video autoplay muted loop playsinline>
-    <source src="https://bagri-shoot.github.io/NP-R-GB-Date/NPR_GB_Date" type="video/mp4" />
+    <source src="https://bagri-shoot.github.io/NP-R-GB-Date/NPR_GB_Date.mp4" type="video/mp4" />
   </video>
 
   <script>
